try to simplify keyboard layout, prevent key squishing... now it's sideways...

--- a/src/GameEngine.Blazor/wwwroot/css/app.css
+++ b/src/GameEngine.Blazor/wwwroot/css/app.css
@@ -321,3 +321,11 @@ button {
         transform: translateX(4px);
     }
 }
+
+#game-keyboard
+{
+    height: var(--keyboard-height);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
